src/objects/Practice_Doctor__c.object
<CustomObject>
    <description>List of external doctors we receive and give referral patients to for the referral program (aka Practice Privileges).</description>
    <fields>
        <fullName>Alt_Phone_Type__c</fullName>
        <label>Alt Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Certifications__c</fullName>
        <label>Board Certifications</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <label>Dental Practice</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>Practice Doctors</relationshipLabel>
        <relationshipName>Practice_Doctors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Doctor_Code__c</fullName>
        <description>ClearConnect code for the Doctor</description>
        <label>Doctor Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Last__c</fullName>
        <formula>First_Name__c + &apos; &apos; + Last_Name__c</formula>
        <label>First Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_State__c</fullName>
        <label>License State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle__c</fullName>
        <label>Middle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nobel_Sales_Rep__c</fullName>
        <label>Nobel Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_not_attending_reason__c</fullName>
        <label>Other not attending reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Clean__c</fullName>
        <formula>substitute(
substitute( 
 substitute( 
 substitute( 
 substitute( 
 substitute( Phone__c , &apos;(&apos;, &apos;&apos;) , 
 &apos;)&apos;, &apos;&apos;) , 
 &apos;-&apos;,&apos;&apos;) , 
 &apos; &apos;,&apos;&apos;) , 
&apos;#&apos;,&apos;&apos;),
&apos;.&apos;,&apos;&apos;)</formula>
        <label>Phone Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Specialty__c</fullName>
        <label>Primary Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Practice</fullName>
                </value>
                <value>
                    <fullName>Orthodontics and Dentofacial Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Surgery</fullName>
                </value>
                <value>
                    <fullName>Pediatric Dentistry</fullName>
                </value>
                <value>
                    <fullName>Periodontics</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Prosthodontics</fullName>
                </value>
                <value>
                    <fullName>Dental Public Health</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Pathology</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Radiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School/ College</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Specialty__c</fullName>
        <label>Secondary Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Practice</fullName>
                </value>
                <value>
                    <fullName>Orthodontics and Dentofacial Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Surgery</fullName>
                </value>
                <value>
                    <fullName>Pediatric Dentistry</fullName>
                </value>
                <value>
                    <fullName>Periodontics</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Prosthodontics</fullName>
                </value>
                <value>
                    <fullName>Dental Public Health</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Pathology</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Radiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wants_to_Attend__c</fullName>
        <label>Wants to Attend?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Not_Attending__c</fullName>
        <label>Why Not Attending?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conflict - Still Interested</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workshops_Registered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Workshops Registered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Practice Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Last__c</columns>
        <columns>Dental_Practice__c</columns>
        <columns>Phone__c</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Email__c</columns>
        <columns>Workshops_Registered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{0}</displayFormat>
        <label>Doctors ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Doctors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>